--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,37 +1,35 @@
 .team {
-   background-color: var(--light-background-color);
-}
+   background-color: getColor("background-light");
 
-.team-list {
-   display: flex;
-   gap: 30px;
+   &-list {
+      display: flex;
+      gap: 30px;
+   }
 }
 
 .team-card {
    width: calc((100% - 60px) / 4);
-   background-color: var(--light-auxiliary-color);
+   background-color: getColor("background-light");
    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
    border-radius: 0px 0px 4px 4px;
-}
 
-.team-card-text {
-   padding-top: 30px;
-   padding-bottom: 30px;
-}
+   &-text {
+      padding-top: 30px;
+      padding-bottom: 30px;
+   }
 
-.team-card-title {
-   margin-bottom: 10px;
+   &-title {
+      margin-bottom: 10px;
 
-   font-weight: 500;
-   font-size: 16px;
-   line-height: 1.19;
-   text-align: center;
-}
+      @include font(16px, 1.19, 500, Null);
+      text-align: center;
+   }
 
-.team-card p {
-   font-size: 16px;
-   line-height: 1.19;
-   text-align: center;
-   margin-bottom: 16px;
+   & p {
+      @include font(16px, 1.19, Null, Null);
+      text-align: center;
+
+      margin-bottom: 16px;
+   }
 }
