--- a/sass/components/_filters.scss
+++ b/sass/components/_filters.scss
@@ -23,8 +23,8 @@
    &:hover,
    &:focus,
    &:active {
-      background-color: var(--accent-color);
-      color: var(--light-auxiliary-color);
+      background-color: getColor("accent");
+      color: getColor("secondary-light");
       box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
          0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
    }
