--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -12,26 +12,24 @@
    width: 100%;
    height: 100%;
 
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @extend %centered;
 
-   color: var(--icons-color);
-   border: 1px solid var(--icons-color);
+   color: getColor("icons");
+   border: 1px solid getColor("icons");
    border-radius: 4px;
 
    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   &:hover,
+   &:focus {
+      color: getColor("accent");
+      border-color: getColor("accent");
+   }
 }
 
 .clients-icon {
    width: 106px;
    height: 60px;
    fill: currentColor;
-}
-
-.clients-link:hover,
-.clients-link:focus {
-   color: var(--accent-color);
-   border-color: var(--accent-color);
 }
