--- a/sass/layouts/_examples.scss
+++ b/sass/layouts/_examples.scss
@@ -2,24 +2,34 @@
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
+
+   &-title {
+      @include font(18px, 2, Null, 0.06em);
+      margin-bottom: 4px;
+   }
+
+   & p {
+      @include font(16px, 1.87, Null, Null);
+      color: getColor("primary-text");
+   }
 }
 
 .example-item {
    width: calc((100% - 60px) / 3);
+
+   &-text {
+      padding: 24px 20px;
+      border-bottom: 1px solid #eeeeee;
+   }
 }
 
-.example-item-text {
-   padding: 24px 20px;
-   border-bottom: 1px solid #eeeeee;
-}
-
-.example-overlay-thumb {
+.overlay-thumb {
    position: relative;
    width: 100%;
    overflow: hidden;
 }
 
-.example-hover-overlay {
+.hover-overlay {
    position: absolute;
    top: 0;
    right: 0;
@@ -30,40 +40,26 @@
    background-color: rgba(33, 150, 243, 0.9);
 
    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.example-hover-overlay .overlay-text {
-   padding: 63px 24px;
-   font-size: 18px;
-   line-height: calc(28 / 18);
-   color: var(--light-auxiliary-color);
-}
+   & .overlay-text {
+      padding: 63px 24px;
+      @include font(18px, 1.56, Null, Null);
+      color: getColor("secondary-light");
+   }
 
-.example-list-title {
-   margin-bottom: 4px;
-   font-size: 18px;
-   line-height: 2;
-   letter-spacing: 0.06em;
-}
-
-.example-list p {
-   color: var(--primary-text-color);
-   font-size: 16px;
-   line-height: 1.87;
+   .example-link:hover & {
+      transform: translateY(0);
+   }
 }
 
 .example-link {
    display: block;
-   background-color: var(--light-auxiliary-color);
+   background-color: getColor("secondary-light");
 
    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.example-link:hover {
-   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.example-link:hover .example-hover-overlay {
-   transform: translateY(0);
+   &:hover {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+         0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+   }
 }
