--- a/sass/layouts/_features.scss
+++ b/sass/layouts/_features.scss
@@ -1,39 +1,39 @@
-.features {
+.feature {
    padding-bottom: 73px;
 }
 
-.feature-list {
+.feature__list {
    display: flex;
    gap: 30px;
 }
 
-.feature-item {
+.feature__item {
    width: calc((100% - 90px) / 4);
 }
 
-.feature-box {
+.box {
    width: 100%;
    height: 120px;
-   background-color: var(--light-background-color);
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   @extend %centered;
+
+   &__icon {
+      width: 70px;
+      height: 70px;
+   }
+}
+
+.feature__box {
+   background-color: getColor("background-light");
    margin-bottom: 30px;
 }
 
-.feature-icon {
-   width: 70px;
-   height: 70px;
-}
-
-.feature-title {
+.feature__title {
    margin-bottom: 10px;
 
-   font-size: 14px;
-   line-height: 1.14;
+   @include font(14px, 1.14, Null, Null);
    text-transform: uppercase;
 }
 
-.feature-list .text {
+.feature__text {
    line-height: 1.71;
 }
