--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,11 +1,10 @@
 .header {
    border-bottom: 1px solid #ececec;
-}
 
-.header__container {
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
+   &__container {
+      display: flex;
+      justify-content: space-between;
+   }
 }
 
 .navigation {
@@ -19,63 +18,69 @@
    gap: 50px;
 }
 
-.menu__link,
-.connect__link {
-   line-height: 1.14;
-   letter-spacing: 0.02em;
-   font-weight: 500;
-
-   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
 .menu__item {
    position: relative;
 }
 
 .menu__link {
+   @include font(Null, 1.14, 500, 0.02em);
+
    display: block;
    padding-top: 32px;
    padding-bottom: 32px;
 
-   color: var(--title-text-color);
+   color: getColor("title");
 
    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   &.current::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      bottom: 0;
+
+      width: 100%;
+      height: 4px;
+
+      background-color: getColor("accent");
+      border-radius: 2px;
+   }
+
+   &:hover,
+   &:focus,
+   &:active,
+   &.current {
+      color: getColor("accent");
+   }
 }
 
-.menu__link.current::after {
-   content: "";
-   position: absolute;
-   left: 0;
-   bottom: 0;
-
-   width: 100%;
-   height: 4px;
-
-   background-color: var(--accent-color);
-   border-radius: 2px;
-}
-
-.header__connect {
+.connect {
    display: flex;
    gap: 50px;
+
+   &__item {
+      display: flex;
+      align-items: center;
+   }
 }
 
 .connect__link {
    display: flex;
-   gap: 10px;
    align-items: center;
-   color: var(--primary-text-color);
+   gap: 10px;
+
+   @include font(Null, 1.14, 500, 0.02em);
+
+   color: getColor("primary-text");
+
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+   &:hover,
+   &:focus {
+      color: getColor("accent");
+   }
 }
 
 .connect__icon {
    fill: currentColor;
-}
-
-.menu__link:hover,
-.menu__link:focus,
-.menu__link:active,
-.menu__link.current,
-.connect__link:hover,
-.connect__link:focus {
-   color: var(--accent-color);
 }
