--- a/sass/layouts/_occupation.scss
+++ b/sass/layouts/_occupation.scss
@@ -1,39 +1,39 @@
 .occupation {
    padding-top: 0;
    padding-bottom: 115px;
+
+   &__list {
+      display: flex;
+      gap: 30px;
+   }
 }
 
-.occupation-list {
-   display: flex;
-   gap: 30px;
-}
-
-.occupation-item {
+.occupation__item {
    width: calc((100% - 60px) / 3);
 }
 
-.occupation-thumb {
-   position: relative;
-   width: 100%;
+.item {
+   &__thumb {
+      position: relative;
+      width: 100%;
+   }
+
+   &__label {
+      width: 100%;
+      height: 70px;
+      position: absolute;
+      bottom: 0;
+      background-image: linear-gradient(
+         rgba(47, 48, 58, 0.8),
+         rgba(47, 48, 58, 0.8)
+      );
+
+      @extend %centered;
+   }
 }
 
-.occupation-label {
-   width: 100%;
-   height: 70px;
-   position: absolute;
-   bottom: 0;
-   background-image: linear-gradient(
-      rgba(47, 48, 58, 0.8),
-      rgba(47, 48, 58, 0.8)
-   );
-   display: flex;
-   justify-content: center;
-   align-items: center;
-}
-
-.occupation-title {
+.label__title {
    text-transform: uppercase;
-   color: var(--light-auxiliary-color);
-   font-size: 14px;
-   line-height: 1.14;
+   color: getColor("secondary-light");
+   @include font(14px, 1.14, Null, Null);
 }
